--- a/Libreria/Properties/Resources.resx
+++ b/Libreria/Properties/Resources.resx
@@ -130,4 +130,10 @@
   <data name="Modificar" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Modificar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="background-book-stack-books-close-up-1148399" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\background-book-stack-books-close-up-1148399.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="blur-book-stack-books-bookshelves-590493" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\blur-book-stack-books-bookshelves-590493.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
